[tool.black]
line-length = 150
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | media
  | migrations
  | secret.*
  | stubs
)/
'''

[tool.poetry]
name = "Ion"
version = "1.0"
description = "The next-generation Intranet platform for TJHSST"
authors = ["The TJHSST Computer Systems Lab"]
license = "GPLv2+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
celery = "^5.0.0"
sentry-sdk = "^1.0.0"
beautifulsoup4 = "^4.0.0"
bleach = "^5.0.0"
tinycss2 = "^1.1.1"
django-requestlogging-redux = "^1.0.0"
django-extensions = "^3.0.0"
djangorestframework = "^3.0.0"
django-maintenance-mode = "^0.16.3"
django-prometheus = "^2.2.0"
django-pipeline = "^2.0.8"
django-widget-tweaks = "^1.4.12"
django-oauth-toolkit = "^2.1.0"
django-cors-headers = "^3.13.0"
django-cacheops = "^6.1"
django-inline-svg = "^0.1.1"
django-simple-history = "^3.1.1"
django-referrer-policy = "^1.0"
django-user-agents = "^0.4.0"
django-debug-toolbar = "^3.7.0"
psycopg2 = "^2.9.4"
python-dateutil = "^2.8.2"
django-redis-sessions = "^0.6.2"
requests-oauthlib = "^1.3.1"
django-redis-cache = "^3.0.1"
reportlab = "^3.6.11"
django-formtools = "^2.4"
pysftp = "^0.2.9"
pycryptodome = "^3.15.0"
python-magic = "^0.4.27"
argon2-cffi = "^21.3.0"
hiredis = "^2.0.0"
lxml = "^4.9.1"
channels-redis = "3.4.1"

[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.3"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
ipython = "^8.5.0"
sphinx-bootstrap-theme = "^0.8.1"
sphinx = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
